--- a/VeryGoodBook_web/.settings/org.eclipse.wst.common.component
+++ b/VeryGoodBook_web/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
+        
     <wb-module deploy-name="VeryGoodBook_web">
+                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <dependent-module archiveName="VeryGoodBook_lib.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/VeryGoodBook_lib/VeryGoodBook_lib">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+                
         <property name="context-root" value="gfs"/>
+                
         <property name="java-output-path" value="/VeryGoodBook_web/build/classes"/>
+            
     </wb-module>
+    
 </project-modules>
